fix alignment of quote

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@ body {
 }
 
 blockquote {
+    text-align: left;
     font-family: Georgia, serif;
     font-size: 1.2em;
     font-style: italic;
